Add frontend stub retrieving results from local backend

--- a/backend/llm-search/template.yaml
+++ b/backend/llm-search/template.yaml
@@ -12,6 +12,10 @@ Globals:
     Environment:
       Variables:
         BING_API_KEY: !Ref BING_API_KEY
+  Api:
+    Cors:
+      AllowOrigin: "'*'"
+
 
 Resources:
   MainFunction:
