Add Azure LLM Summary for first result snippet

--- a/backend/llm-search/template.yaml
+++ b/backend/llm-search/template.yaml
@@ -8,10 +8,12 @@ Description: >
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
-    Timeout: 3
+    Timeout: 20
     Environment:
       Variables:
         BING_API_KEY: !Ref BING_API_KEY
+        AZURE_AI_API_KEY: !Ref AZURE_AI_API_KEY
+        AZURE_AI_BASE_URL: !Ref AZURE_AI_BASE_URL
   Api:
     Cors:
       AllowOrigin: "'*'"
