--- a/backend/llm-search/main/package.json
+++ b/backend/llm-search/main/package.json
@@ -14,12 +14,13 @@
     "dev": "cd .. && sam build && sam local start-api -p 8001 --env-vars env.json"
   },
   "dependencies": {
-    "esbuild": "^0.14.14"
+    "esbuild": "^0.14.14",
+    "openai": "^4.72.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.2.0",
     "@types/aws-lambda": "^8.10.92",
     "@types/jest": "^29.2.0",
-    "@jest/globals": "^29.2.0",
     "@types/node": "^20.5.7",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
