--- a/backend/llm-search/main/package.json
+++ b/backend/llm-search/main/package.json
@@ -14,11 +14,14 @@
     "dev": "cd .. && sam build && sam local start-api -p 8001 --env-vars env.json"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "esbuild": "^0.14.14",
-    "openai": "^4.72.0"
+    "openai": "^4.72.0",
+    "puppeteer-core": "^24.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.2.0",
+    "@sparticuz/chromium": "^131.0.1",
     "@types/aws-lambda": "^8.10.92",
     "@types/jest": "^29.2.0",
     "@types/node": "^20.5.7",
