--- a/backend/llm-search/main/package.json
+++ b/backend/llm-search/main/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hello_world",
+  "name": "llm-search",
   "version": "1.0.0",
-  "description": "hello world sample for NodeJS",
+  "description": "LLMSearch backend main function",
   "main": "app.js",
   "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
   "author": "SAM CLI",
