--- a/backend/llm-search/template.yaml
+++ b/backend/llm-search/template.yaml
@@ -15,7 +15,7 @@ Globals:
   Api:
     Cors:
       AllowOrigin: "'*'" # To be changed
-
+      
 Resources:
   ChromiumLayer:
     Type: AWS::Serverless::LayerVersion
@@ -32,7 +32,7 @@ Resources:
       BuildArchitecture: *chromiumArch
 
   MainFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Type: AWS::Serverless::Function
     Properties:
       CodeUri: main/
       Handler: app.lambdaHandler
@@ -42,12 +42,12 @@ Resources:
       Layers: 
         - !Ref ChromiumLayer
       Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+        Search:
+          Type: Api
           Properties:
             Path: /search
             Method: get
-      Timeout: 30
+      Timeout: 60
       MemorySize: 4096
     Metadata: # Manage esbuild properties
       BuildMethod: esbuild
