--- a/backend/llm-search/template.yaml
+++ b/backend/llm-search/template.yaml
@@ -12,6 +12,7 @@ Globals:
         AZURE_AI_API_KEY: !Ref AZURE_AI_API_KEY
         AZURE_AI_BASE_URL: !Ref AZURE_AI_BASE_URL
         HYPERBOLIC_AI_API_KEY: !Ref HYPERBOLIC_AI_API_KEY
+        DEEPSEEK_API_KEY: !Ref DEEPSEEK_API_KEY
   Api:
     Cors:
       AllowOrigin: "'*'" # To be changed
