--- a/backend/llm-search/main/package.json
+++ b/backend/llm-search/main/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint '*.ts' --quiet --fix",
     "compile": "tsc",
     "test": "npm run compile && npm run unit",
-    "dev": "cd .. && sam build && sam local start-api -p 8001 --env-vars env.json"
+    "dev": "cd .. && sam build && sam local start-api -p 8001 --env-vars env.json --parameter-overrides EnvironmentType=dev",
+    "deploy": "cd .. && sam deploy"
   },
   "dependencies": {
     "axios": "^1.8.4",
