--- a/backend/llm-search/template.yaml
+++ b/backend/llm-search/template.yaml
@@ -212,3 +212,32 @@ Resources:
         Sourcemap: true
         EntryPoints:
           - handlers/generateWebpageSummaryHandler.ts # Updated path
+
+  # Function to handle chat continuation
+  ChatFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: main/
+      Handler: handlers/chatHandler.handler # Path to the new handler
+      Runtime: *nodejsRuntime
+      Architectures:
+        - *chromiumArch
+      Events:
+        ChatApi:
+          Type: Api
+          Properties:
+            RestApiId: !Ref ServerlessRestApi
+            Path: /chat
+            Method: post
+            Auth:
+              ApiKeyRequired: true
+      Timeout: 60 # Timeout for LLM call
+      MemorySize: 512 # Memory for LLM call
+    Metadata:
+      BuildMethod: esbuild
+      BuildProperties:
+        Minify: true
+        Target: "es2020"
+        Sourcemap: true
+        EntryPoints:
+          - handlers/chatHandler.ts # Entry point for the new handler
