--- a/backend/main/package.json
+++ b/backend/main/package.json
@@ -12,20 +12,27 @@
     "compile": "tsc",
     "test": "npm run compile && npm run unit",
     "dev": "cd .. && sam build && sam local start-api -p 8001 --env-vars env.json --parameter-overrides EnvironmentType=dev",
+    "local": "cd .. && sam local start-api -p 8001 --env-vars env.json --parameter-overrides EnvironmentType=dev",
     "deploy": "cd .. && sam build && sam deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.788.0",
+    "@aws-sdk/lib-dynamodb": "^3.789.0",
+    "@sparticuz/chromium": "^131.0.1",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
     "esbuild": "^0.14.14",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^4.72.0",
-    "puppeteer-core": "^24.0.0",
-    "@sparticuz/chromium": "^131.0.1"
+    "puppeteer-core": "^24.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.2.0",
     "@types/aws-lambda": "^8.10.92",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.2.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.5.7",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
