--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -3,6 +3,7 @@ Transform: AWS::Serverless-2016-10-31
 Description: >
   llm-search backend SAM template
   
+# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
     Environment:
@@ -15,11 +16,6 @@ Globals:
         OPEN_ROUTER_API_KEY: !Ref OpenRouterApiKey
         APP_ENVIRONMENT: !Ref EnvironmentType # Pass environment type to functions
   Api:
-    Auth:
-      Authorizers:
-        CognitoAuthorizer:
-          UserPoolArn: !GetAtt CognitoUserPool.Arn
-      DefaultAuthorizer: CognitoAuthorizer
     Cors:
       AllowOrigin: !If
         - IsDevEnvironment
@@ -75,51 +71,29 @@ Resources:
   LlmSearchApiKey:
     Type: AWS::ApiGateway::ApiKey
     Properties:
-      UserPoolName: !Sub llm-search-user-pool-${EnvironmentType}
-      Schema:
-        - Name: email
-          AttributeDataType: String
-          Mutable: false
-          Required: true
-      Policies:
-        PasswordPolicy:
-          MinimumLength: 8
-          RequireLowercase: true
-          RequireNumbers: true
-          RequireSymbols: false
-          RequireUppercase: true
-      AutoVerifiedAttributes:
-        - email
-      UsernameAttributes:
-        - email
-      MfaConfiguration: 'OFF'
+      Name: LlmSearchFrontendKey
+      Description: API Key for the LLM Search Frontend
+      Enabled: true
+      GenerateDistinctId: true # Let AWS generate the key value
 
-  CognitoUserPoolClient:
-    Type: AWS::Cognito::UserPoolClient
+  LlmSearchUsagePlan:
+    Type: AWS::ApiGateway::UsagePlan
     Properties:
-      ClientName: !Sub llm-search-frontend-client-${EnvironmentType}
-      UserPoolId: !Ref CognitoUserPool
-      GenerateSecret: false
-      AllowedOAuthFlowsUserPoolClient: true
-      AllowedOAuthFlows:
-        - code
-        - implicit
-      AllowedOAuthScopes:
-        - phone
-        - email
-        - openid
-        - profile
-        - aws.cognito.signin.user.admin
-      SupportedIdentityProviders:
-        - COGNITO
-      CallbackURLs:
-        - http://localhost:8081/ # For local testing
-        - exp://localhost:8081/+expo-auth-session # For local testing
-        - !If [ IsProdEnvironment, 'https://llm-search.pages.dev/', !Ref "AWS::NoValue" ]
-      LogoutURLs:
-        - http://localhost:8081/
-        - exp://localhost:8081/+expo-auth-session
-        - !If [ IsProdEnvironment, 'https://llm-search.pages.dev/', !Ref "AWS::NoValue" ]
+      UsagePlanName: LlmSearchFrontendUsagePlan
+      Description: Usage plan for the LLM Search Frontend
+      ApiStages:
+        - ApiId: !Ref ServerlessRestApi # Reference the implicit API Gateway
+          Stage: !Ref ServerlessRestApiProdStage # Reference the implicit Prod stage
+      Throttle: # Add basic rate limiting
+        BurstLimit: 5
+        RateLimit: 10
+
+  LlmSearchUsagePlanKey:
+    Type: AWS::ApiGateway::UsagePlanKey
+    Properties:
+      KeyId: !Ref LlmSearchApiKey
+      KeyType: API_KEY
+      UsagePlanId: !Ref LlmSearchUsagePlan
 
   # Shared Layer for Chromium
   ChromiumLayer:
@@ -154,6 +128,8 @@ Resources:
             RestApiId: !Ref ServerlessRestApi
             Path: /search
             Method: get
+            Auth:
+              ApiKeyRequired: true
       Timeout: 30
       MemorySize: 1024
     Metadata:
@@ -183,6 +159,8 @@ Resources:
             RestApiId: !Ref ServerlessRestApi
             Path: /process-url # New Path
             Method: post # New Method
+            Auth:
+              ApiKeyRequired: true
       Timeout: 120 # Needs longer timeout for scraping/LLM
       MemorySize: 3008 # Needs more memory for Chromium/LLM
     Metadata:
@@ -197,7 +175,7 @@ Resources:
           - "@sparticuz/chromium"
 
   # Function to generate the GENERAL summary from partial summaries
-  GenerateGeneralSummaryFunction:
+  GenerateGeneralSummaryFunction: # Renamed Function
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: main/
@@ -213,6 +191,8 @@ Resources:
             RestApiId: !Ref ServerlessRestApi
             Path: /generate-general-summary
             Method: post
+            Auth:
+              ApiKeyRequired: true
       Timeout: 60
       MemorySize: 512
     Metadata:
@@ -225,7 +205,7 @@ Resources:
           - handlers/generateGeneralSummaryHandler.ts
 
   # Function to generate a single WEBPAGE summary
-  GenerateWebpageSummaryFunction:
+  GenerateWebpageSummaryFunction: # New Function
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: main/
@@ -241,6 +221,8 @@ Resources:
             RestApiId: !Ref ServerlessRestApi
             Path: /generate-webpage-summary # New Path
             Method: post
+            Auth:
+              ApiKeyRequired: true
       Timeout: 60 # Timeout for LLM call
       MemorySize: 512 # Memory for LLM call
     Metadata:
@@ -257,7 +239,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: main/
-      Handler: handlers/chatHandler.handler
+      Handler: handlers/chatHandler.handler # Path to the new handler
       Runtime: *nodejsRuntime
       Architectures:
         - *chromiumArch
@@ -268,6 +250,8 @@ Resources:
             RestApiId: !Ref ServerlessRestApi
             Path: /chat
             Method: post
+            Auth:
+              ApiKeyRequired: true
       Timeout: 60 # Timeout for LLM call
       MemorySize: 512 # Memory for LLM call
     Metadata:
