--- a/backend/main/package.json
+++ b/backend/main/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
     "esbuild": "^0.14.14",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.72.0",
     "puppeteer-core": "^24.0.0"
